Add knitted output REST resource.
